--- a/rodape.html
+++ b/rodape.html
@@ -6,14 +6,24 @@
   <title>Rodapé com Horário de Funcionamento</title>
   <!-- Inclua os arquivos CSS do Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Estilo personalizado para centralizar o conteúdo do rodapé */
+    .footer-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-<h1>rftyuiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii</h1>
+
 <div class="container">
   <div class="row">
     <div class="col-12">
       <h1>Conteúdo do Site</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+.
     </div>
   </div>
 </div>
@@ -22,13 +32,15 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
-        <p>Horários de Funcionamento da Biblioteca:</p>
-        <ul>
-          <li>Segunda a Sexta: 9:00 - 18:00</li>
-          <li>Sábado: 10:00 - 14:00</li>
-          <li>Domingo: Fechado</li>
-        </ul>
+        <div class="footer-content text-center">
+          <p>&copy; 2023 Seu Site. Todos os direitos reservados.</p>
+          <p>Horários de Funcionamento da Biblioteca:</p>
+          <ul>
+            <li>Segunda a Sexta: 9:00 - 18:00</li>
+            <li>Sábado: 10:00 - 14:00</li>
+            <li>Domingo: Fechado</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
