--- a/acervo.html
+++ b/acervo.html
@@ -3,7 +3,7 @@
 <head>
 <style>
   body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-seri;
     margin: 20px;
     padding: 10px;
   }
@@ -11,13 +11,13 @@
     width: 80%;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f8f8f8;
+    background-color: #f8f8f800;
     border: 1px solid #1f0404;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(194, 107, 107, 0.1);
   }
   h1 {
-    color: #33333342;
+    color: #eb202042;
   }
   p {
     line-height: 1.6;
