--- a/automacao.html
+++ b/automacao.html
@@ -12,7 +12,7 @@
 <!-- Example Code -->
 
 <p><a href="https://www.martinsfontespaulista.com.br/confiabilidade-metrologica-906782/p?idsku=906782&utm_source=google&utm_medium=cpc&utm_campaign=&utm_content=&gclid=Cj0KCQjwrfymBhCTARIsADXTabnZS_9UNeUzzYzcuSowpqGsoW3jHajrS80U03q-1xf49-sTZEDcA7caAnyaEALw_wcB" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Confiabilidade metrológica </a></p>
-<img src="" alt="">
+<img src="img/auto.jps.jpg" alt="">
 
 
 
