--- a/alimentos.html
+++ b/alimentos.html
@@ -16,25 +16,16 @@
         padding: 3rem;
         margin: 0;
         border: 0;
+        align-content: center;
     }
-    .link-offset-2 {
-        margin-left: 2rem;
+    .img{
+        align-items: center;
+     
+        
     }
-    .link-underline-opacity-25:hover {
-        text-decoration: underline;
-        opacity: 0.25;
-    }
-    .link-underline-opacity-100-hover:hover {
-        text-decoration: underline;
-        opacity: 1;
-    }
-    .img-container {
-        max-width: 100%;
-        height: auto;
-        margin-top: 1rem;
-    }
-</style>
 
+</style>
+<div class=".img">
 <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/alimentos-para-animais/2999724477?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjwrfymBhCTARIsADXTabkdJ_BaOizTL7Q1MI9kbm6GyBrbVFpmxM-sHcPty70eiGe6VblYsF8aAsqmEALw_wcB">Alimentos para animais </a></p>
 <img src="img/Alimentos para animais.jpg" alt="">
 
@@ -65,6 +56,7 @@
 
 <p><a href="https://www.amazon.com.br/Industrializa%C3%A7%C3%A3o-Leites-V%C3%A1rios-Autores/dp/8583935629" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Industrialização de leites</a></p>
 <img src="img/Industrialização de Leites Capa comum.jpg" alt="">
+</div>
 
 <!-- End Example Code -->
 </body>
