--- a/acervo.html
+++ b/acervo.html
@@ -14,20 +14,20 @@
     background-color: #f8f8f800;
     border: 1px solid #1f0404;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(194, 107, 107, 0.1);
+    box-shadow: 0 2px 5px rgba(69, 81, 79, 0.388);
   }
   h1 {
     color: #eb202042;
   }
   p {
     line-height: 1.6;
-    color: #666666d3;
+    color: #5a393b56;
   }
 </style>
 </head>
 <body>
   <div class="container">
-    <h1>Termos de Uso do Acervo da Biblioteca</h1>
+    <h1>Termos de Uso da Biblioteca</h1>
     <p>Ao utilizar o acervo da biblioteca, você concorda com os seguintes termos:</p>
     <ol>
       <li>Os materiais do acervo são de uso exclusivo para fins educacionais e de pesquisa.</li>
@@ -43,4 +43,16 @@
     </p>
   </div>
 </body>
-</html>
+<div class="container text-center">
+  <div class="row align-items-center">
+    <div class="col">
+      Horario de Funcionamento:
+    </div>
+    <div class="col">
+      Segunda a Sábado
+    </div>
+    <div class="col">
+      Das 08h as 18h
+    </div>
+  </div>
+ 
