--- a/index.html
+++ b/index.html
@@ -48,5 +48,38 @@
                </div>
              </nav> 
          </nav>
+         <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/auto.jps.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Alimentos para animais.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="conteudo">
+            <p>Conheça a nossa biblioteca:</p>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xNktUJTsusc?si=qsg4zJFFOxj9chFs" frameborder="0"></iframe>
+        </div>
+        <style>
+            .conteudo {
+                text-align: center;
+                font-size: x-large;
+                background-color: rgba(24, 220, 255, 0.127) ;
+                padding: 10px;
+            }
+        </style>
 </body>
 </html>
