--- a/Metalmecânica.html
+++ b/Metalmecânica.html
@@ -80,49 +80,46 @@
 </style>
 <div class="container">
 <div class="element">
-<p><a href="hhttps://www.estantevirtual.com.br/busca?q=Assistente%20Administrativo" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Assistente Administrativo</a></p>
-<img src ="img/Assistente Administrativo.jpg" alt="">
+<p><a href="https://www.amazon.com.br/Calibra%C3%A7%C3%A3o-Instrumentos-Medi%C3%A7%C3%A3o-Informa%C3%A7%C3%B5es-Tecnol%C3%B3gicas/dp/8565418146" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Calibração de Instrumentos de Medição</a></p>
+<img src ="img/Calibração de instrumentos de medição.jpg" alt="">
 </div>
 
 <div class="element">
-<p><a href="https://www.estantevirtual.com.br/livros/senai/tolerancia-geometrica/527959703?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjw_5unBhCMARIsACZyzS1I7RlPtCQV5JXhBIYeogBqaVZW6oVTUjmCsGLeDKr9c_449_BiwmQaArKAEALw_wcB" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Tolerância Geométrica</a></p>
-<img src ="img/Tolerância geométrica.jpg" alt="">
+<p><a href="https://www.estantevirtual.com.br/livros/senai-sp/assistente-de-contabilidade-colecao-gestao/3527463798?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Assistente de contabilidade</a></p>
+<img src ="img/Assistente de contabilidade.jpg" alt="">
 
 </div>
 <div class="element">
     
-<p><a href="https://www.amazon.com.br/Desenho-Aplicado-ao-Projeto-Mecanismos/dp/8583931445" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Desenho aplicado ao projeto de mecanismos</a></p>
-<img src ="img/Desenho aplicado ao projeto de mecanismos.jpg" alt="">
+<p><a href="https://www.amazon.com.br/Comunica%C3%A7%C3%A3o-Empresarial-Carolina-Tomasi/dp/8597019174" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Comunicação empresarial</a></p>
+<img src ="img/Comunicação empresarial.jpg" alt="">
 </div>
 <div class="element">
 
-<p><a href="https://www.amazon.com.br/Fen%C3%B4menos-Transporte-Aplica%C3%A7%C3%B5es-Industriais-Ambiente/dp/8583931410" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Fenômenos de Transporte: Aplicações Industriais</a></p>
-<img src ="img/Fenômenos de transporte - Aplicações industriais.jpg" alt="">
-
-</div>
-<div class="element">
-
-<p><a href="https://www.amazon.com.br/Resist%C3%AAncia-dos-Materiais-Elementos-M%C3%A1quinas/dp/858393116X"class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"></a>Resistência dos materiais e elementos de máquinas</a></p>
-<img src ="img/Resistência dos Materiais e Elementos de Máquinas.jpg" alt="">
+<p><a href="https://www.estantevirtual.com.br/livros/senai-sp/controle-de-perdas-e-refugos-colecao-gestao/2495137891?show_suggestion=0" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Controle de perdas e refugos</a></p>
+<img src ="img/Controle de perdas e refugos.jpg" alt="">
 
 </div>
 <div class="element">
 
-<p><a href="https://www.amazon.com.br/Tecnologia-Mec%C3%A2nica-Aplicada-An%C3%A1lise-Esfor%C3%A7os/dp/8583931291" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Tecnologia Mecânica Aplicada à Análise de Esforços</a></p>
-<img src ="img/Tecnologia Mecânica Aplicada à Análise de Esforços.jpg" alt="">
+<p><a href="https://www.amazon.com.br/Ferramentas-Qualidade-Cole%C3%A7%C3%A3o-Roberto-Possarle/dp/8583930120/ref=asc_df_8583930120/?tag=googleshopp00-20&linkCode=df0&hvadid=379793917328&hvpos=&hvnetw=g&hvrand=6905175592889425044&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1001765&hvtargid=pla-423316250151&psc=1" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Ferramentas da Qualidade</a></p>
+<img src ="img/Ferramentas da Qualidade.jpg" alt="">
 
 </div>
 <div class="element">
 
-<p><a href="https://www.amazon.com.br/Administra%C3%A7%C3%A3o-Manuten%C3%A7%C3%A3o-Industrial-T%C3%A9cnicas-Aplicadas/dp/8583939632" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Administração da manutenção industrial - Técnicas aplicadas</a></p>
-<img src ="img/Administração da manutenção industrial - Técnicas aplicadas.jpg"">
+<p><a href="https://www.amazon.com.br/Lideran%C3%A7a-Informa%C3%A7%C3%B5es-Tecnol%C3%B3gicas-Gest%C3%A3o-ebook/dp/B01MZ80BNM" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Liderança</a></p>
+<img src ="img/Liderança.jpg" alt="">
 
 </div>
-
-
 <div class="element">
-<div class=""class="https://www.amazon.com.br/Ajustagem-Mec%C3%A2nica-Tecnologia-Aplicada-Opera%C3%A7%C3%B5es/dp/8583937729"></a>Ajustagem Mecânica: Tecnologia Aplicada e Operações</a></p>
-<img src ="img/Ajustagem Mecânica231.jpg" alt="">
+
+<p><a href="https://www.amazon.com.br/Motiva%C3%A7%C3%A3o-desempenho-pessoal-Valmir-Borine/dp/8583938830" class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Motivação e desempenho pessoal</a></p>
+<img src ="img/Motivação e desempenho pessoal.jpg" alt="">
+</div>
+<div class="element">
+<p><a href="https://www.amazon.com.br/Planejamento-dos-Recursos-Instala%C3%A7%C3%B5es-Industriais/dp/8583930945"class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"></a>>O Planejamento dos Recursos e das Instalações Industriais</a></p>
+<img src ="img/O planejamento dos recursos e das instalações industriais.jpg" alt="">
 
 </div>
 </div>
