--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
          <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="img/IMG-20230824-WA0021.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/auto.jps.jpg" class="d-block w-100" alt="...">
+                <img src="img/IMG-20230824-WA0022.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="img/Alimentos para animais.jpg" class="d-block w-100" alt="...">
+                <img src="img/IMG-20230824-WA0026.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -80,6 +80,50 @@
                 background-color: rgba(24, 220, 255, 0.127) ;
                 padding: 10px;
             }
+        </style>
+        <p class="titulo">Sugestões:</p>
+        <div class="container">
+            <div class="element">
+                <p><a href="https://www.estantevirtual.com.br/livros/senai-sp/alimentos-para-animais/2999724477?ano_min=2010&livro_usado=1&b_order=preco&gclid=Cj0KCQjwrfymBhCTARIsADXTabkdJ_BaOizTL7Q1MI9kbm6GyBrbVFpmxM-sHcPty70eiGe6VblYsF8aAsqmEALw_wcB">Alimentos para animais </a></p>
+                <img src="img/Alimentos para animais.jpg" alt="" class="livros">
+            </div>
+            <div class="element">
+                <p><a href="https://www.magazineluiza.com.br/livro-boas-praticas-de-fabricacao-para-manipulacao-de-alimentos/p/223581600/li/adml/?seller_id=espacoshop&utm_source=google&utm_medium=pla&utm_campaign=&partner_id=68055&gclid=Cj0KCQjwrfymBhCTARIsADXTabkWWUbquGNTsYGm1X9SArEyVz8QWPrdGRTa0i_KIQC_fCDZ9NT9o4saAiTCEALw_wcB&gclsrc=aw.ds" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"> Boas práticas de fabricação para manipulação de alimentos</a></p>
+                <img src="img/Boas práticas de fabricação para manipulação de alimentos.jpg" alt="" class="livros">
+            </div>
+            <div class="element">
+                <p><a href="https://www.estantevirtual.com.br/oficinadosaber/senai-sp-fundamentos-de-panificacao-e-confeitaria-3893225820?gclid=Cj0KCQjwrfymBhCTARIsADXTabkWXQ-PoMqYmQz7MbRBR_HanI9D1NOPxVPWeqS_XNWfhKeI0DGVbcMaAjCjEALw_wcB" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Fundamentos de panificação e confeitaria</a></p>
+                <img src="img/Fundamentos de Panificação e Confeitaria.jpg" alt="" class="livros">
+            </div>
+        </div>
+        <style>
+        .container{
+            padding: 20px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 30px;
+        }
+        .element {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            width: auto;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid black;
+            border-radius: 20px;
+            padding: 10px;
+        }
+        .livros {
+            height: 30vh;
+            width: 20vh;
+        }
+        .titulo {
+            margin-top: 10px;
+            font-size: x-large;
+            text-align: center;
+        }
         </style>
 </body>
 </html>
