--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="alimentos.html">Alimentos </a></li>
-                                    <li><a class="dropdown-item" href="#">Automação</a></li>
-                                    <li><a class="dropdown-item" href="#">Currículo comum</a></li>
-                                    <li><a class="dropdown-item" href="#">Eltroeletrônica</a></li>
-                                    <li><a class="dropdown-item" href="#">Gestão</a></li>
-                                    <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                                    <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                                    <li><a class="dropdown-item" href="#">Segurança de trabalho </a></li>
-                                    <li><a class="dropdown-item" href="#">TI</a></li>
-                                    <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                                    <li><a class="dropdown-item" href="#">Meio ambiente</a></li>
+                                    <li><a class="dropdown-item" href="automacao.html">Automação</a></li>
+                                    <li><a class="dropdown-item" href="CurrículoComum.html">Currículo comum</a></li>
+                                    <li><a class="dropdown-item" href="eletronica.html">Eltroeletrônica</a></li>
+                                    <li><a class="dropdown-item" href="Gestao.html">Gestão</a></li>
+                                    <li><a class="dropdown-item" href="Metalmecânica.html">Metalmecânica</a></li>
+                                    <li><a class="dropdown-item" href="segurançatrabalho.html">Segurança de trabalho </a></li>
+                                    <li><a class="dropdown-item" href="ti.html">TI</a></li>
+                                    <li><a class="dropdown-item" href="MeioAmbiente.html">Meio ambiente</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                 </ul>
                             </li>
