--- a/Vestuário.html
+++ b/Vestuário.html
@@ -8,49 +8,42 @@
     <title>Alimentos</title>
 </head>
 <body>
- <nav class="navbar" style="background-color: #e3f2fd;">
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-           
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <nav class="navbar" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" >
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Sugestões</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="acervo.html">Termos</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Categorias
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Alimentos </a></li>
-                      <li><a class="dropdown-item" href="#">Automação</a></li>
-                      <li><a class="dropdown-item" href="#">Currículo comum</a></li>
-                      <li><a class="dropdown-item" href="#">Eltroeletrônica</a></li>
-                      <li><a class="dropdown-item" href="#">Gestão</a></li>
-                      <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                      <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                      <li><a class="dropdown-item" href="#">Segurança de trabalho </a></li>
-                      <li><a class="dropdown-item" href="#">TI</a></li>
-                      <li><a class="dropdown-item" href="#">Metalmecânica</a></li>
-                      <li><a class="dropdown-item" href="#">Meio ambiente</a></li>
-
-                      <li><hr class="dropdown-divider"></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                  </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Sugestões</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="acervo.html">Termos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Categorias
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="alimentos.html">Alimentos </a></li>
+                            <li><a class="dropdown-item" href="automacao.html">Automação</a></li>
+                            <li><a class="dropdown-item" href="CurrículoComum.html">Currículo comum</a></li>
+                            <li><a class="dropdown-item" href="eletronica.html">Eltroeletrônica</a></li>
+                            <li><a class="dropdown-item" href="Gestao.html">Gestão</a></li>
+                            <li><a class="dropdown-item" href="Metalmecânica.html">Metalmecânica</a></li>
+                            <li><a class="dropdown-item" href="segurançatrabalho.html">Segurança de trabalho </a></li>
+                            <li><a class="dropdown-item" href="ti.html">TI</a></li>
+                            <li><a class="dropdown-item" href="MeioAmbiente.html">Meio ambiente</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                        </ul>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Pesquisar</button>
                 </form>
-              </div>
             </div>
-          </nav> 
-      </nav>
+        </div>
+    </nav> 
+</nav>
       <style>
         .container{
             padding: 30px;
