--- a/CurrículoComum.html
+++ b/CurrículoComum.html
@@ -50,7 +50,8 @@
                    padding: 30px;
                    display: grid;
                    grid-template-columns: repeat(3, 1fr);
-                   gap: 30px;
+                   gap: 30px
+                
                }
                .element {
                    display: flex;
@@ -61,6 +62,7 @@
                    align-items: center;
                    justify-content: center;
                    border: 1px solid black;
+                   
                    border-radius: 20px;
                    padding: 10px;
                }
